welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: ';' expected but 'else' found.
		else { if (getDirection()==Direction.WEST) {
                ^